--- a/online-feature-store/sdks/python/pyproject.toml
+++ b/online-feature-store/sdks/python/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "orion_py_client"
-version = "0.1.4"
+name = "online_feature_store_py_client"
+version = "0.1.1"
 authors = [
   { name="Jaya Kommuru", email="jaya.kommuru@meesho.com"}
 ]
@@ -24,7 +24,7 @@ classifiers = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/client"]
+packages = ["src/online_feature_store_py_client"]
 
 [project.urls]
 "Homepage" = "https://github.com/Meesho/BharatMLStack"
