--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: horizon/go.mod
+          go-version: '1.22'
+          cache: false
 
       - name: Cache Go modules
         uses: actions/cache@v3
@@ -74,10 +75,11 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@2023.1.7
+
       - name: Run staticcheck
-        uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          working-directory: horizon
+        run: staticcheck ./...
 
   build-trufflebox-ui:
     needs: detect-changes
@@ -132,7 +134,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: online-feature-store/go.mod
+          go-version: '1.22'
+          cache: false
 
       - name: Cache Go modules
         uses: actions/cache@v3
@@ -159,10 +162,11 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@2023.1.7
+
       - name: Run staticcheck
-        uses: dominikh/staticcheck-action@v1.3.0
-        with:
-          working-directory: online-feature-store
+        run: staticcheck ./...
 
   summary:
     needs: [build-horizon, build-trufflebox-ui, build-online-feature-store]
