--- a/.github/workflows/horizon.yml
+++ b/.github/workflows/horizon.yml
@@ -47,7 +47,7 @@ jobs:
         run: go vet ./...
 
       - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@2023.1.7
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run staticcheck
         run: staticcheck ./... 
