--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       trufflebox-ui-changed: ${{ steps.changes.outputs.trufflebox-ui }}
       online-feature-store-changed: ${{ steps.changes.outputs.online-feature-store }}
       go-sdk-changed: ${{ steps.changes.outputs.go-sdk }}
+      py-sdk-changed: ${{ steps.changes.outputs.py-sdk }}
       multiple-components: ${{ steps.check-multiple.outputs.multiple }}
       any-component: ${{ steps.check-any.outputs.any }}
     steps:
@@ -39,6 +40,8 @@ jobs:
               - 'online-feature-store/**'
             go-sdk:
               - 'go-sdk/**'
+            py-sdk:
+              - 'py-sdk/**'
 
       - name: Check if multiple components changed
         id: check-multiple
@@ -56,6 +59,9 @@ jobs:
           if [ "${{ steps.changes.outputs.go-sdk }}" == "true" ]; then
             changed_count=$((changed_count + 1))
           fi
+          if [ "${{ steps.changes.outputs.py-sdk }}" == "true" ]; then
+            changed_count=$((changed_count + 1))
+          fi
           
           if [ $changed_count -gt 1 ]; then
             echo "multiple=true" >> $GITHUB_OUTPUT
@@ -66,7 +72,7 @@ jobs:
       - name: Check if any component changed
         id: check-any
         run: |
-          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ]; then
+          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ]; then
             echo "any=true" >> $GITHUB_OUTPUT
           else
             echo "any=false" >> $GITHUB_OUTPUT
@@ -84,6 +90,7 @@ jobs:
           echo "- Trufflebox UI CI: ${{ needs.detect-changes.outputs.trufflebox-ui-changed }}"
           echo "- Online Feature Store CI: ${{ needs.detect-changes.outputs.online-feature-store-changed }}"
           echo "- Go SDK CI: ${{ needs.detect-changes.outputs.go-sdk-changed }}"
+          echo "- Python SDK CI: ${{ needs.detect-changes.outputs.py-sdk-changed }}"
           echo "This workflow will proceed with integration tests..."
 
   integration-tests:
@@ -100,6 +107,7 @@ jobs:
           echo "Checking if Horizon API is compatible with Online Feature Store..."
           echo "Checking if Trufflebox UI can communicate with both services..."
           echo "Testing Go SDK compatibility with backend services..."
+          echo "Testing Python SDK compatibility with backend services..."
           # Add actual integration test commands here
 
       - name: Integration Test - Docker Compose
@@ -176,4 +184,5 @@ jobs:
           echo "- Horizon: ${{ needs.detect-changes.outputs.horizon-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Trufflebox UI: ${{ needs.detect-changes.outputs.trufflebox-ui-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Online Feature Store: ${{ needs.detect-changes.outputs.online-feature-store-changed }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Go SDK: ${{ needs.detect-changes.outputs.go-sdk-changed }}" >> $GITHUB_STEP_SUMMARY 
+          echo "- Go SDK: ${{ needs.detect-changes.outputs.go-sdk-changed }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Python SDK: ${{ needs.detect-changes.outputs.py-sdk-changed }}" >> $GITHUB_STEP_SUMMARY 
